# atp-port-setting-edb

./: .gitignore  README.md  gemini.md  main.py  pyproject.toml  requirements.txt  run.bat
src/: main.py  obj.txt
src/templates/: index.html
