[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atp-port-setting-edb"
version = "0.1.0"
description = "初始化專案結構與說明。"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "mlin", email = "your-email@example.com" },
]
requires-python = ">=3.9"

# 專案執行時的必要依賴
dependencies = [
    # "pandas",
    # "numpy",
]

[project.optional-dependencies]
# 開發與測試環境的依賴
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
